--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "dev:server": "node --env-file=.env server/dev-server.mjs",
+  "dev:server": "pnpm exec tsx server/node-build.ts",
+    "dev:all": "concurrently \"pnpm run dev\" \"pnpm run dev:server\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
@@ -110,12 +111,13 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
-    "vaul": "^1.1.2",
-    "vite": "^7.1.2",
-    "@playwright/test": "^1.48.2",
-    "vitest": "^3.2.4"
+  "tsx": "^4.20.3",
+  "typescript": "^5.9.2",
+  "vaul": "^1.1.2",
+  "vite": "^7.1.2",
+  "@playwright/test": "^1.48.2",
+  "vitest": "^3.2.4",
+  "concurrently": "^8.2.0"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
