--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "vite",
-  "dev:server": "pnpm exec tsx server/node-build.ts",
+    "dev:server": "pnpm exec tsx server/node-build.ts",
     "dev:all": "concurrently \"pnpm run dev\" \"pnpm run dev:server\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
@@ -24,6 +24,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@reactflow/background": "^11.3.14",
+    "@reactflow/controls": "^11.2.14",
+    "@reactflow/core": "^11.11.4",
+    "@reactflow/minimap": "^11.7.14",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
@@ -31,20 +37,21 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.4.0",
+    "gsap": "^3.12.5",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "mongoose": "^8.7.0",
     "pino": "^9.5.0",
+    "reactflow": "11.10.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "gsap": "^3.12.5",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@playwright/test": "^1.48.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -88,6 +95,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
@@ -111,13 +119,11 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
-  "tsx": "^4.20.3",
-  "typescript": "^5.9.2",
-  "vaul": "^1.1.2",
-  "vite": "^7.1.2",
-  "@playwright/test": "^1.48.2",
-  "vitest": "^3.2.4",
-  "concurrently": "^8.2.0"
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "vaul": "^1.1.2",
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
