--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 # .env is better suited for public variables, ie, variables that should not commited
 # For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
+# Google OAuth credentials for backend
+GOOGLE_CLIENT_ID=your-client-id
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_CALLBACK_URL=http://localhost:8080/api/auth/google/callback
+
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
