--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "mongoose": "^8.7.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^9.5.0",
     "reactflow": "11.10.4",
     "socket.io": "^4.8.1",
