--- a/.env
+++ b/.env
@@ -1,6 +1,23 @@
 # .env is better suited for public variables, ie, variables that should not commited
 # For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
+# MongoDB Configuration
+# Primary MongoDB Atlas URI (if connection issues, fallback will be used)
+MONGO_URI=mongodb+srv://yugtheguy:Yug%402809@commit.jcfr0go.mongodb.net/algotrader?retryWrites=true&w=majority&appName=commit
+
+# Alternative URI formats to try
+# MONGO_URI=mongodb+srv://yugtheguy:Yug%402809@commit.jcfr0go.mongodb.net/?retryWrites=true&w=majority&appName=commit&tls=true&tlsInsecure=true
+# MONGO_URI=mongodb://yugtheguy:Yug%402809@commit-shard-00-00.jcfr0go.mongodb.net:27017,commit-shard-00-01.jcfr0go.mongodb.net:27017,commit-shard-00-02.jcfr0go.mongodb.net:27017/algotrader?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
+
+# Local fallback for development (install MongoDB locally if needed)
+# MONGO_URI=mongodb://localhost:27017/algotrader
+
+MONGO_DB=algotrader
+
+# JWT Secrets
+JWT_ACCESS_SECRET=your-jwt-access-secret-key-here
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-key-here
+
 # Google OAuth credentials for backend
 GOOGLE_CLIENT_ID=your-client-id
 GOOGLE_CLIENT_SECRET=your-client-secret
