--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@
 
 # MongoDB Configuration
 # Primary MongoDB Atlas URI (if connection issues, fallback will be used)
-MONGO_URI=mongodb+srv://yugtheguy:Yug%402809@commit.jcfr0go.mongodb.net/algotrader?retryWrites=true&w=majority&appName=commit
+MONGO_URI=mongodb+srv://yugtheguy:HQimyhoDfVro3y8E@commit.jcfr0go.mongodb.net/algotrader?retryWrites=true&w=majority&appName=commit
 
 # Alternative URI formats to try
-# MONGO_URI=mongodb+srv://yugtheguy:Yug%402809@commit.jcfr0go.mongodb.net/?retryWrites=true&w=majority&appName=commit&tls=true&tlsInsecure=true
-# MONGO_URI=mongodb://yugtheguy:Yug%402809@commit-shard-00-00.jcfr0go.mongodb.net:27017,commit-shard-00-01.jcfr0go.mongodb.net:27017,commit-shard-00-02.jcfr0go.mongodb.net:27017/algotrader?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
+# MONGO_URI=mongodb+srv://yugtheguy:HQimyhoDfVro3y8E@commit.jcfr0go.mongodb.net/?retryWrites=true&w=majority&appName=commit&tls=true&tlsInsecure=true
+# MONGO_URI=mongodb://yugtheguy:HQimyhoDfVro3y8E@commit-shard-00-00.jcfr0go.mongodb.net:27017,commit-shard-00-01.jcfr0go.mongodb.net:27017,commit-shard-00-02.jcfr0go.mongodb.net:27017/algotrader?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
 
 # Local fallback for development (install MongoDB locally if needed)
 # MONGO_URI=mongodb://localhost:27017/algotrader
