--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.32.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@reactflow/background": "^11.3.14",
