--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "mongoose": "^8.7.0",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pino": "^9.5.0",
     "reactflow": "11.10.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "technicalindicators": "^3.1.0",
+    "yahoo-finance2": "^2.13.3",
     "zod": "^3.25.76",
     "zustand": "4.4.7"
   },
